using identifier change second line and font size

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -5,3 +5,6 @@ font-famiy:Verdana,"DejaVu Sans",sans-serif;
 .font-size-change{
     font-size:24px;
 }
+#second-line{
+    color: #0000ff;
+    font-size:32px;}
