give fouth-line id all the requirements

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -8,3 +8,8 @@ font-famiy:Verdana,"DejaVu Sans",sans-serif;
 #second-line{
     color: #0000ff;
     font-size:32px;}
+#fourth-line{
+    background-color: #00ff0080;
+    font-size:24px;
+    font-weight:bold;
+}
