--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content: space-between;
+  padding: 8px;
+align-items: center;
 }
 
 .logo {
@@ -8,12 +12,19 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  
+ 
+ 
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
+  gap:8px;
+  padding:0;
+  margin:0;
+  margin-top: 2px;
 }
 
 a {
