--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content:space-between;
+ 
+
+
 }
 
 .profile-image {
@@ -27,22 +32,46 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 8px;
 }
 
+.right{
+  display:flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-right: 8px;
+  gap:16px;
+
+  
+}
 button {
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin-right: 16px;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin:0;
+  padding:0;
+
+
+}
+.left {
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+  align-items: center;
 }
