give value to .three{} and and text and button for dsired result

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -15,12 +15,22 @@ body {
   justify-content: center;
 }
 
+
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 10px;
 }
+.three {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+
+}
+
 
 .icon {
   color: royalblue;
@@ -33,6 +43,14 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: 0px;
+  padding-left: 0;
+}
+.header {
+font-weight: bold;
+font-size: 20px;
+
+
 }
 
 .close-button {
@@ -60,10 +78,18 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  margin-left: 100px;
+  margin-top: 10px;
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+
+}
+.text {
+
+  margin-left: 100px;
+  display: block;
 }
